# asc

./: asc.sln
ascApp/: CMakeLists.txt  argument.cpp  argument.h  ascApp.cpp  ascApp.vcxproj  ascApp.vcxproj.filters
ascLib/: CMakeLists.txt  ascLib.vcxproj  ascLib.vcxproj.filters
ascLib/include/: ASCstructures.h  CPUdetect.h  IOfunctions.h  ME.h  MotionEstimationEngine.h  asc.h  asc_AVX2_impl.h  asc_CPU_dispatcher.h  asc_C_impl.h  asc_SSE4_impl.h  asc_common_impl.h  asc_common_opt.h  tree.h
ascLib/src/: IOfunctions.cpp  MotionEstimationEngine.cpp  asc.cpp  asc_AVX2_impl.cpp  asc_C_impl.cpp  asc_SSE4_impl.cpp  asc_common_opt.cpp  tree.cpp
